--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Teahouse</title>
 </head>
 <body>
-  <img id="timeImage" src="none.jpg" alt="Time-based image">
+    <div style="display: flex; justify-content: center; margin-top: 40px;">
+        <img id="timeImage" width="900px" src="none.jpg" alt="Time-based image">
+    </div>
 </body>
 <script>
   const IMAGE_URLS = {
